[package]
name = "chkdeps"
version = "0.1.0"
edition = "2018"
rust-version = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.66"
clap = { version = "=4.0.29", features = ["derive"] }
dirs = "=4.0.0"
lenient_semver = "=0.4.2"
semver = { version = "=1.0.16", features = ["serde"] }
serde = { version = "=1.0.145", features = ["derive", "rc", "alloc"] }
serde_json = { version = "=1.0.57", features = ["raw_value"] }
termcolor = "=1.2.0"
toml = "=0.7.3"
tracing = "=0.1.31"
ureq = { version = "=2.5.0", features = ["tls", "native-tls", "native-certs", "gzip", "brotli"] }
either = { version = "=1.7.0", features = ["serde"] }